a version using an experimental @SumType AST transform